# ChangeLog for net-irc/quassel
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-irc/quassel/ChangeLog,v 1.177 2014/09/24 13:01:04 kensington Exp $

  24 Sep 2014; Michael Palimaka <kensington@gentoo.org> quassel-9999.ebuild:
  dev-qt/qtwebkit:5 no longer has a widgets USE flag.

  13 Sep 2014; Johannes Huber <johu@gentoo.org> quassel-0.10.0-r1.ebuild:
  RDEPEND on sys-libs/zlib, bug #521238.

  13 Sep 2014; Johannes Huber <johu@gentoo.org> quassel-9999.ebuild:
  Add qt5 use flag.

  25 Aug 2014; Manuel Rüger <mrueg@gentoo.org> quassel-0.10.0-r1.ebuild:
  Mark amd64 stable. Bug #516836.

  05 Aug 2014; Patrick Lauer <patrick@gentoo.org> quassel-0.9.2.ebuild,
  quassel-0.9.3.ebuild:
  Make description more repoman-happy

  10 Jun 2014; Mikle Kolyada <zlogene@gentoo.org> quassel-0.9.3.ebuild:
  x86 stable wrt bug #509496

  24 May 2014; Markos Chandras <hwoarang@gentoo.org> quassel-0.9.3.ebuild:
  Stable on amd64 wrt bug #509496

  03 May 2014; Johannes Huber <johu@gentoo.org> -quassel-0.10.0.ebuild,
  quassel-9999.ebuild:
  Add systemd unit file to live ebuild as well, bug #508450. Remove old.

*quassel-0.10.0-r1 (02 May 2014)

  02 May 2014; Pacho Ramos <pacho@gentoo.org> +files/quasselcore.service,
  +quassel-0.10.0-r1.ebuild:
  Add unit file (#508450 by Konstantin)

*quassel-0.10.0 (01 Apr 2014)

  01 Apr 2014; Johannes Huber <johu@gentoo.org> +quassel-0.10.0.ebuild,
  quassel-9999.ebuild:
  Version bump. Update live ebuild to use git-r3 eclass and remove ancient vars.

  01 Apr 2014; Johannes Huber <johu@gentoo.org> metadata.xml:
  Add myself as maintainer acked by Patrick.

*quassel-0.9.3 (27 Mar 2014)

  27 Mar 2014; Manuel Rüger <mrueg@gentoo.org> +quassel-0.9.3.ebuild,
  quassel-0.9.2.ebuild, quassel-9999.ebuild:
  Version bump. Also add missing dependency on dev-util/automoc. Fixes bug
  #468346.

  23 Dec 2013; Sergey Popov <pinkbyte@gentoo.org> -quassel-0.9.1.ebuild: