@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile config configure install postinst prepare setup test
+DEPEND=sys-libs/zlib qt5? ( dev-qt/qtcore:5 dev-qt/qtnetwork:5[ssl?] ) !qt5? ( dev-qt/qtcore:4[ssl?] ) monolithic? ( qt5? ( dev-qt/qtscript:5 postgres? ( dev-qt/qtsql:5[postgres] ) !postgres? ( dev-qt/qtsql:5[sqlite] dev-db/sqlite:3[threadsafe(+),-secure-delete] ) ) !qt5? ( dev-qt/qtscript:4 crypt? ( app-crypt/qca:2 app-crypt/qca-ossl ) postgres? ( dev-qt/qtsql:4[postgres] ) !postgres? ( dev-qt/qtsql:4[sqlite] dev-db/sqlite:3[threadsafe(+),-secure-delete] ) ) syslog? ( virtual/logger ) qt5? ( dev-qt/qtgui:5 dev-qt/qtwidgets:5 dbus? ( dev-libs/libdbusmenu-qt[qt5(+)] dev-qt/qtdbus:5 ) phonon? ( media-libs/phonon[qt5] ) webkit? ( dev-qt/qtwebkit:5 ) ) !qt5? ( dev-qt/qtgui:4 ayatana? ( dev-libs/libindicate-qt ) dbus? ( dev-libs/libdbusmenu-qt[qt4(+)] dev-qt/qtdbus:4 kde? ( kde-base/kdelibs:4 kde-base/oxygen-icons:4 ayatana? ( kde-misc/plasma-widget-message-indicator ) ) ) phonon? ( || ( media-libs/phonon[qt4] dev-qt/qtphonon:4 ) ) webkit? ( dev-qt/qtwebkit:4 ) ) ) !monolithic? ( server? ( qt5? ( dev-qt/qtscript:5 postgres? ( dev-qt/qtsql:5[postgres] ) !postgres? ( dev-qt/qtsql:5[sqlite] dev-db/sqlite:3[threadsafe(+),-secure-delete] ) ) !qt5? ( dev-qt/qtscript:4 crypt? ( app-crypt/qca:2 app-crypt/qca-ossl ) postgres? ( dev-qt/qtsql:4[postgres] ) !postgres? ( dev-qt/qtsql:4[sqlite] dev-db/sqlite:3[threadsafe(+),-secure-delete] ) ) syslog? ( virtual/logger ) ) X? ( qt5? ( dev-qt/qtgui:5 dev-qt/qtwidgets:5 dbus? ( dev-libs/libdbusmenu-qt[qt5(+)] dev-qt/qtdbus:5 ) phonon? ( media-libs/phonon[qt5] ) webkit? ( dev-qt/qtwebkit:5 ) ) !qt5? ( dev-qt/qtgui:4 ayatana? ( dev-libs/libindicate-qt ) dbus? ( dev-libs/libdbusmenu-qt[qt4(+)] dev-qt/qtdbus:4 kde? ( kde-base/kdelibs:4 kde-base/oxygen-icons:4 ayatana? ( kde-misc/plasma-widget-message-indicator ) ) ) phonon? ( || ( media-libs/phonon[qt4] dev-qt/qtphonon:4 ) ) webkit? ( dev-qt/qtwebkit:4 ) ) ) ) qt5? ( dev-qt/linguist-tools:5 ) sys-devel/make >=dev-util/cmake-2.8.12 userland_GNU? ( >=sys-apps/findutils-4.4.0 ) virtual/pkgconfig
+DESCRIPTION=Qt/KDE IRC client supporting a remote daemon for 24/7 connectivity
+EAPI=5
+HOMEPAGE=http://quassel-irc.org/
+IUSE=ayatana crypt dbus debug kde monolithic phonon postgres qt5 +server +ssl syslog webkit X
+KEYWORDS=~amd64 ~arm ~ppc ~x86 ~amd64-linux ~sparc-solaris
+LICENSE=GPL-3
+RDEPEND=sys-libs/zlib qt5? ( dev-qt/qtcore:5 dev-qt/qtnetwork:5[ssl?] ) !qt5? ( dev-qt/qtcore:4[ssl?] ) monolithic? ( qt5? ( dev-qt/qtscript:5 postgres? ( dev-qt/qtsql:5[postgres] ) !postgres? ( dev-qt/qtsql:5[sqlite] dev-db/sqlite:3[threadsafe(+),-secure-delete] ) ) !qt5? ( dev-qt/qtscript:4 crypt? ( app-crypt/qca:2 app-crypt/qca-ossl ) postgres? ( dev-qt/qtsql:4[postgres] ) !postgres? ( dev-qt/qtsql:4[sqlite] dev-db/sqlite:3[threadsafe(+),-secure-delete] ) ) syslog? ( virtual/logger ) qt5? ( dev-qt/qtgui:5 dev-qt/qtwidgets:5 dbus? ( dev-libs/libdbusmenu-qt[qt5(+)] dev-qt/qtdbus:5 ) phonon? ( media-libs/phonon[qt5] ) webkit? ( dev-qt/qtwebkit:5 ) ) !qt5? ( dev-qt/qtgui:4 ayatana? ( dev-libs/libindicate-qt ) dbus? ( dev-libs/libdbusmenu-qt[qt4(+)] dev-qt/qtdbus:4 kde? ( kde-base/kdelibs:4 kde-base/oxygen-icons:4 ayatana? ( kde-misc/plasma-widget-message-indicator ) ) ) phonon? ( || ( media-libs/phonon[qt4] dev-qt/qtphonon:4 ) ) webkit? ( dev-qt/qtwebkit:4 ) ) ) !monolithic? ( server? ( qt5? ( dev-qt/qtscript:5 postgres? ( dev-qt/qtsql:5[postgres] ) !postgres? ( dev-qt/qtsql:5[sqlite] dev-db/sqlite:3[threadsafe(+),-secure-delete] ) ) !qt5? ( dev-qt/qtscript:4 crypt? ( app-crypt/qca:2 app-crypt/qca-ossl ) postgres? ( dev-qt/qtsql:4[postgres] ) !postgres? ( dev-qt/qtsql:4[sqlite] dev-db/sqlite:3[threadsafe(+),-secure-delete] ) ) syslog? ( virtual/logger ) ) X? ( qt5? ( dev-qt/qtgui:5 dev-qt/qtwidgets:5 dbus? ( dev-libs/libdbusmenu-qt[qt5(+)] dev-qt/qtdbus:5 ) phonon? ( media-libs/phonon[qt5] ) webkit? ( dev-qt/qtwebkit:5 ) ) !qt5? ( dev-qt/qtgui:4 ayatana? ( dev-libs/libindicate-qt ) dbus? ( dev-libs/libdbusmenu-qt[qt4(+)] dev-qt/qtdbus:4 kde? ( kde-base/kdelibs:4 kde-base/oxygen-icons:4 ayatana? ( kde-misc/plasma-widget-message-indicator ) ) ) phonon? ( || ( media-libs/phonon[qt4] dev-qt/qtphonon:4 ) ) webkit? ( dev-qt/qtwebkit:4 ) ) ) )
+REQUIRED_USE=|| ( X server monolithic ) ayatana? ( || ( X monolithic ) ) crypt? ( || ( server monolithic ) ) dbus? ( || ( X monolithic ) ) kde? ( || ( X monolithic ) ) phonon? ( || ( X monolithic ) ) postgres? ( || ( server monolithic ) ) qt5? ( !ayatana !crypt !kde phonon ) syslog? ( || ( server monolithic ) ) webkit? ( || ( X monolithic ) )
+SLOT=0
+SRC_URI=http://quassel-irc.org/pub/quassel-0.11.0.tar.bz2
+_eclasses_=cmake-utils	da2974fcb060ec927e93a17c835afa67	eutils	32548a82e42dc26e3312581476d2f20c	flag-o-matic	75e24bac8423c515dd9c5717f08feb83	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	pax-utils	8257582809714b788173511f975d767d	systemd	090342761f573a8280dd5aa6b0345f3b	toolchain-funcs	0f1760274637a138b99bb649202ea402	user	f54e098dd38ba1c0847a13e685b87747	versionator	cd0bcdb170807e4a1984115e9d53a26f
+_md5_=fe5f12c2bdcf05b1d9db71a3b6631aaa
