@@ -7,29 +7,30 @@ AUX quasselcore.conf 714 SHA256 16cfaf919268ee3c3281fc4ad0dfc128b1c98f5edfc5cc52
 AUX quasselcore.init 1857 SHA256 af041a6c800ffb443d008b861c639bf32580b3655f7db3bc00db833374af6b2e SHA512 0405af90fe65589e163d6b2470ea4d4d3b8dad49ee3b89caba9bcffd7186bd92f204da4f8404e5ed489a949fc89b898f0b94c94c8382f90f89ccda5e2b8e2382 WHIRLPOOL 7fefa3e977f5edce047c8f928e52b3dfc702a151930a92365be7d9eb0e88adffa924164e080bf8170dfb4a95c357cb9b059394d3854464f93d58f577ecea41de
 AUX quasselcore.service 189 SHA256 33c71f621f69f2eb6a5c613b979238c085a1e1aef3ee162011341c1a26821dae SHA512 3f0e15582dca70ca11beddb50aa6c6d993d4283ff89dc83a84b1acf2c0d2edba306fdab30eb05937f363cf507e34b7f884e0852d88be68748b68ac7b4013b776 WHIRLPOOL 97e88e0581d064305390a7e093bc550f1fcad9a782ca7d7bae941aa56d9f6fbd72a98d67c0d85b3cf6f17d282ddc76e4c61ddc83a2ee14079b4643f8b29cb5fd
 DIST quassel-0.10.0.tar.bz2 2873233 SHA256 68228ce23aa3a992add3d00cb1e8b4863d8ca64bea99c881edf6d16ff9ec7c23 SHA512 e194d4f9bbcecedfebd72c48d5f1e2a4185ff9d69134629b79e532af8f3fa9841e3cb99a6aae30e9bd79440c08487eeb23d6d6914690b90d1ae0952bb6168693 WHIRLPOOL bedd3de56e7625219a2970842ff0b073abbdc3488c8efece112c92f277386d5a3b63bde100a6e3daf2d5c0011e515e9fef81b888feec58d2a6571b4f898e8578
+DIST quassel-0.11.0.tar.bz2 2875387 SHA256 99a191b8bc2a410f7020b890ec57e0be49313f539da9f4843675bb108b0f4504 SHA512 51450559df2c0fee9a54b76a9342edb9a3b834f1f58edc556e0c1bf1f9366c846d95e7953e1b48c6ecf67ea4255b3574ed3ce537962eec222c5c03ab02852c1d WHIRLPOOL c2ffb7e052a5d412aec5d1b8bacc8cdb8144c20d62d699ca1d8972fd5e8fe6ce89da49251a02c22008061b344d9408b3f018b3b39623703b4d980c289cd5613a
 DIST quassel-0.9.2.tar.bz2 2782855 SHA256 f04d01602509c1d950602502e5f51aba47d99c73a9c70e77c563bb7749fc53c0 SHA512 81e343b9b7df7473c9d899df9ad8c4baa779545ac4fe15c3b7d47f3e9473d24aa78c8cfc1833b79ec5b4b3173e8d83e22394a50b7184f348b3f1155bb3724f3d WHIRLPOOL 0b5b45c1bb400f5e2728d5e74f35bc5ef010c029c242940b83c4e6ec3a0c0d16d0c9d9848278d075a548e4e15736f142cc99d4741b8e4901d6589b7f7e05996f
 DIST quassel-0.9.3.tar.bz2 2783132 SHA256 ec29df5c55a02f91d15fa23618b42fc82b0bb912594420cc6340a40567ea3d4d SHA512 f200c23fe0e0459dfc116dcd194184a8be28e65d8116859925c1887c6cff290316a704ca3666c0a5b65ed93e2a6a65aed890babb466fe3996bf9c0e08f988e98 WHIRLPOOL fd9b3bd2241845de69e907d2fc3d895054289c271584b07c99b3032effda44183cd2ba3f0d4b1590e93a72a3735ecca6a1d53c1ccd0a3fc32fc6dc5ec5b2281a
 EBUILD quassel-0.10.0-r1.ebuild 4966 SHA256 eafc247a740236af7e70b9add0892fed0cd42cc74cd48dea43ae7611e22494e7 SHA512 decfc86cf8334cdafe1e9261c9f5fb1c9b9f196ac877685c880b448a2613c34b487e897f3b2143e104153d76ee81902584777ded2dc2d23c6bcbd727dd421f5b WHIRLPOOL 24334804f7f48bc3281c2064eb5870172fd468158a055deb0a9ff3597b577c19d3edc930b04a93d43da5eda4ff587f628569a92228abec4d69e5aafe71e412da
+EBUILD quassel-0.11.0.ebuild 5597 SHA256 f0acf3600484df4379c18ac92784859cbfca8462b5ffa0deeade101b4e268d22 SHA512 86fd461154884dd34083d1590322adcd89ebaa714e536c57a32ee16f5ef71c91c37d84d60e39cbc95e65b84a32b47dcc59e1551f021439b9ccc5554c0569333f WHIRLPOOL ab6c4acc40dfe462987e68b0f9370252cf73f542dbc2d5a4e0ca541492351b7fc3f5eb903af9f76bdf9c90819c0a23cdab22f2fddd26293ec22faeb03f9b233a
 EBUILD quassel-0.9.2.ebuild 5190 SHA256 f4e3399fe1a2d3ae14c7f4294498ee88aa5228e3e93f9c04db0da8f22525604a SHA512 6b081fdae1de4b60081549d6444e438b650df6a573c897c7dbfc660e44a96315175313c54700bb8a56d51506eb0edab1f7c9123049e5d721b5b46a936d565338 WHIRLPOOL 37a6c7aa1cfc8b88866d59cbcb41d77f07c25b43ec70e2bbaafc6e3313230cbc5ba601ab24b58c732bddb57712195518baa0e2ee925445c3e0751c196d3f9cb9
 EBUILD quassel-0.9.3.ebuild 5097 SHA256 1b0e6ecea841358b6fa78215bc522a6bd0c3a0ba490a009ce1b63bbf1485a980 SHA512 774e04fb8c2bb1a15f62bd2799d6db87a7a689d1dd8495df81b96c4047cc514bc1c783be88ada6527c22d7886bda6025133c3b7abc1baea88f5190b34d10cf39 WHIRLPOOL 8bc52bc44fa0384e7093eca9450879fcc27ed7a375ab72bc2f807fbc251830d2be919c9b61b1681e7846dbd01c1989e74c5514c72fb54f5032a411af6ebc5802
 EBUILD quassel-9999.ebuild 5553 SHA256 653ecda87ef9f959ff63a7dbe0b1ddd045cd1d204e055be985214db60029cca6 SHA512 4a0c288591abb7ad89094ffbe13a781a21ba49610cdd048294a06feb0226fec8e9bcd033fe42af310b4373896bd5573d9be560223264073c86a8fc6eb39f70b3 WHIRLPOOL 0f6ffcb50f9b33a6538afee55f140ccf6dbaf4698e403c1ff82640d4ada103e52257b50003b47cdabc3a58e0d4c70ca04d3c9b7f29ab563f00ca05fbe5ff224b
-MISC ChangeLog 27756 SHA256 7b24dc1670fbb7523ec1d45aeb943839ab6932861da565361db469940f97d58b SHA512 a2d698e579ff4a3c1ac58ee7423a80efce244762c6f0e12cfc274070c9104a10d7fe4ff4371d805a936750190916654201ad467642f62efca6e24a8e665fd2eb WHIRLPOOL 9155d18f646c46122644e986479f8231a965ae6ba845fcd2b718386355e57809ca14d02998b7a538a787f6abc22fc4ce560487e86c8ea7367526250494633fe4
+MISC ChangeLog 27870 SHA256 a2b9b34c32005b17f43029f598b7127f024a9d9d2cdfecc51907b81154ebc6ad SHA512 f3eca32e12fb8834973b72bcde3f5d91f069c8b85d9a008431bbe263c8eb7f97d0ebe0d57bf45e1241cfebd7d2323bc6fe506249c827546c96f5c8950df909b8 WHIRLPOOL f2e662e3296ed52c613ee02067ca5de578d285ceb0f2b331f903cf4fecc82a2cbd374fe88bcff6bda12e3e0800cdef814134fbb47c27f5a76d3b73c3d5d04dc3
 MISC metadata.xml 1687 SHA256 20a821b954973d1f6c42184c6ca474b972896e6649ab37a44f093a7b3964e3c5 SHA512 7586fd9fa8552ae40e9294819bd56365e8e97eda8c5669519b57e8712e801c3513937effb716bd3e2cb75f47c3d180947b5a7a20107a8292f92d7c4c2837684a WHIRLPOOL 165eb876fc157171ac2d25ead567fce5ecd4d8ccab275591c0d9d18b8cb4e2f104a6a1b63c3bde76c0afdeee5651f13668ee30fe98a9bdc1b28e6f6fa2dcbc33
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0
+Version: GnuPG v2
 
-iQJiBAEBCABMBQJUIsCYRRSAAAAAABQAKGlzc3Vlci1mcHJAbm90YXRpb25zOTc5
-MTY5NkQ3RDM3NkRBN0U5QjZGMTUwMDZCMUYzOERDQTQ1QTFFQwAKCRAGsfONykWh
-7DJaD/9uYDcZdPEtcW0D0w+S/JgdVG7zK/cVrLZioVz8w8g400D+AOec329kvAYy
-48qKjCakllwmpkgvsEMm/kKX7e4aTSFhGOxjJ7t5RUpc+N+RUhrPu1zqITC4c4IR
-mOG3I9R0Dh0KY8rfnYdFCSSEm42UoLIZtaN+yfbknD33NU2EE9b6T0msK7SR0hF1
-s/nAZQp+gKmdLucEycGIXRhTgqrSAEhlpE+zSejoDQTstX1TXaKpPdRSjIvg8tZy
-I5J6OV6Ka9kmBcilDjjicJU1S9iqhwpn6NzE7GIUCvVesPeIhC79L2dPRXAxsZw7
-C7nQ+jPRQUpv5c49cf8pZUdIJ8dayQO1pY4B8Y4bk/rLPmYhIe3kyoyob3oT79OC
-Ymns9kq/6zhYGomUA+SGdYdDSIluE8ApTT8fiSiuSKoRD288MQ2BlPHvuenk9/KS
-qBIjuj5NMbIEdJbplr6kDw6BMyFyS16yNRUH8xodzRe1taB2zNu9EM8C/vWdKueQ
-lUg7Jwm266HGv24sB5c2kgbBBSRrS+EoGJPLq1G7nvdq5wcPH1U3780Z1fSlfAVu
-t467KH2D8/3BQsMy22AQK/VQv0TSPHBWtVH46NT8TeyWoeG6dmqh9pmHJjPx0jdP
-wVobO7H/G6icaqdip4LwzBB5ZmO5jPmqQzufjY0PpxMtSR0NdQ==
-=Jtd0
+iQIcBAEBCAAGBQJUIvMvAAoJEGVpnaTzz9K9DSEP+wa7CdT5oNFhpgmBFgT9R1d5
+cXfsdhoY/TXVTXVVabw7UaOTRCDUAmkkwmnPj9mMIqwwXHrytKd0PYj+dFbA/q+X
+h++dtmUKjRwTxbgzGqacXVCAu9hhzkZPO1qgEd60GvWln8j6S/NzzHGTS1LNIRCa
+Cb3FtdprMsPmYn3b0j5L9lYYu0GTI3b1h4tElqPCNRDI4VEzhSb7L6fzl+5M5Nfd
+Z5yBTNCG8V/dxGZaHDJtULcIoNuSsYNsBTay5urrBYYEMfFDg79SbJi6kwKySZpS
+LZP1sxEMS3DTOn5iJ7ofCtqQiL2x5eNPhCMAyabjYnqbjHeiYHG2ulaDDzu/W1gi
+d1OObxGVAkHt1qZnvPHAPvNznjnkLf2HdU1Bf58krsmqT0N6vCtHXgBuI7mi9Ega
+ul0ViJ4x90MvJP+HChFe1T8403lt3Bcu12ilnRUvLgfhuKWw2GVcHIIhLYnIo46U
+PU8KOGm9ZlmJbJyRcqxS9Uh6DiUkny4Rb7B5z9Mv2e8hkmGfhmuftFbWPqvwBMbS
+XXuNDCo/1y0oNgsif/OMIBjPTLVOEzlSVqKJCdGT/Jt6TbNzp6/1xbGvovJi2YQJ
+iWsB5g3reg3hfC3G1OXch6mYC+Rv4HqzdsikyEz4P3NYlIK3K9Ft1FSLxrj73vRO
+0JRETRjNI/IDHCjCaGNT
+=HeWZ
 -----END PGP SIGNATURE-----
