@@ -1,6 +1,11 @@
 # ChangeLog for net-irc/quassel
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-irc/quassel/ChangeLog,v 1.177 2014/09/24 13:01:04 kensington Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-irc/quassel/ChangeLog,v 1.178 2014/09/24 16:36:59 johu Exp $
+
+*quassel-0.11.0 (24 Sep 2014)
+
+  24 Sep 2014; Johannes Huber <johu@gentoo.org> +quassel-0.11.0.ebuild:
+  Version bump.
 
   24 Sep 2014; Michael Palimaka <kensington@gentoo.org> quassel-9999.ebuild:
   dev-qt/qtwebkit:5 no longer has a widgets USE flag.
